Add dark mode toggle, adjust layout and scaling, change AlpineJS integration

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,6 @@
 ---
+import Monogram from './Monogram.astro';
+import DarkModeToggle from './darkModeToggle.astro';
 interface Props {
     className?: string;
 }
@@ -7,6 +9,6 @@ const {className} = Astro.props;
 ---
 
 <footer class={className}>
-
-<h5 class="text-lg font-bold">I'm a footer and this is my fallback content</h5>
+    <DarkModeToggle />
+<Monogram className=''/>
 </footer>
