--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Navbar from './Navbar.astro';
+
 interface Props {
     className?: string;
 }
@@ -8,6 +8,7 @@ const {className} = Astro.props;
 ---
 
 <header class={className}>
-    <Navbar />
+    <!-- <Navbar /> -->
     <!-- <h5 class="text-lg font-bold">I'm a header and this is fallback content</h5> -->
+
 </header>
