--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,3 +1,9 @@
 ---
 ---
 
+<nav class="py-4">
+    <ul class="flex justify-center space-x-4">
+      <li><a href="/" class="text-lg font-bold hover:text-opacity-80 transition-colors duration-200">Home</a></li>
+      <li><a href="/projects" class="text-lg font-bold hover:text-opacity-80 transition-colors duration-200">Projects</a></li>
+    </ul>
+  </nav>
