--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,18 +11,27 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html x-data="{darkMode: $persist(false)}" :class="{ 'dark': darkMode
+}" lang="en" >
 	<BaseHead title={title}/>
 
-	<body class="overflow-hidden flex flex-col flex-nowrap items-center justify-between">
-		<Header className=' my-5 p-3' />
+	<body x-cloak class="overflow-hidden flex flex-col flex-nowrap items-center justify-between">
+		<Header className=' p-3' />
 		<main class="w-full h-fit flex flex-wrap flex-col items-center justify-center p-3">
 			<slot />
 		</main>
-		<Footer className='my-5 p-3'>
+		<Footer className='p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-end' />
 			
-		</Footer>
 	</body>
+
+<!-- AlpineJS Plugins -->
+	<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+
+<!-- AlpineJS Core -->
+	<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+
+
 </html>
 <style is:global>
 	/* Font imports */
@@ -72,15 +81,13 @@ const { title } = Astro.props;
 
 
 	:root {
-		--text-primary: #303037;
+		--text-primary: ;
 		@apply text-base;
 	}
 	html {
 		width: 100vw;
 		height: 100vh;
-		background: url("../assets/bg/bgDoodles.svg") no-repeat center/cover fixed, #e2e9e0;
-		background-blend-mode: overlay;
-		color: var(--text-primary);
+		
 	}
 	
 	h1, h2, h3 {
@@ -92,7 +99,13 @@ const { title } = Astro.props;
 	}
 
 	body {
-		@apply min-w-full min-h-full font-sans text-base;
+		background: url("../assets/bg/bgDoodles.svg") no-repeat center/cover fixed;
+		background-blend-mode: overlay;
+		@apply min-w-full min-h-full font-sans text-base  bg-[#e2e9e0] dark:bg-[#303037] text-[#303037] dark:text-[#e2e9e0];
+	}
+
+	#monogram #lbracket, #monogram #rbracket, #monogram #M {
+		@apply fill-[#303037] dark:fill-[#e2e9e0]
 	}
 	
 	code {
