--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-<div id="hero" class="max-w-5xl text-center space-y-4 py-4">
+<Layout title="Hey, I'm Martin!">
+<div id="hero" class="max-w-fit text-center space-y-4 py-4 flex justify-center flex-nowrap flex-col items-center">
 	<h1 class="font-bold text-4xl md:text-5xl xl:text-8xl">Hey, I'm Martin</h1>
-	<h3 class="font-sans text-2xl max-w-xs md:max-w-sm xl:max-w-full xl:text-3xl">Crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.</h3>
+	<h3 class="font-sans text-2xl max-w-xs md:max-w-sm xl:max-w-xl xl:text-3xl">
+		Crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.
+	</h3>
 </div>
 
 </Layout>
