modified:   src/components/Footer.astro 	new file:   src/components/IconBar.astro 	modified:   src/components/darkModeToggle.astro

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import Monogram from './Monogram.astro';
 import DarkModeToggle from './darkModeToggle.astro';
+import IconBar from './IconBar.astro'
 interface Props {
     className?: string;
 }
@@ -10,5 +11,6 @@ const {className} = Astro.props;
 
 <footer class={className}>
     <DarkModeToggle />
+    <IconBar />
 <Monogram className=''/>
 </footer>
