--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,11 +11,11 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html x-data="{darkMode: $persist(false)}" :class="{ 'dark': darkMode
+<html x-cloak x-transition x-data="{darkMode: $persist(false), init: false}" x-init="$nextTick(() => {init = true; })" x-bind:class="{ 'dark': darkMode
 }" lang="en" >
 	<BaseHead title={title}/>
 
-	<body x-cloak class="overflow-hidden flex flex-col flex-nowrap items-center justify-between">
+	<body x-cloak x-bind:class="{'transition-all duration-500' : init}" class="overflow-hidden flex flex-col flex-nowrap items-center justify-between">
 		<Header className=' p-3' />
 		<main class="w-full h-fit flex flex-wrap flex-col items-center justify-center p-3">
 			<slot />
@@ -84,6 +84,9 @@ const { title } = Astro.props;
 		--text-primary: ;
 		@apply text-base;
 	}
+
+	
+
 	html {
 		width: 100vw;
 		height: 100vh;
