--- a/src/components/Monogram.astro
+++ b/src/components/Monogram.astro
@@ -5,9 +5,7 @@ interface Props {
 
 const {className} = Astro.props
 ---
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg id="monogram" class={className} width="2rem" height="2rem" viewBox="0 0 605 313" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+<svg id="monogram" class={className} width="2rem" height="2rem" viewBox="0 0 605 313" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
     <rect id="Monogram" x="0" y="0" width="604.167" height="312.5" style="fill:none;"/>
     <g id="Monogram1">
         <g id="Dark" transform="matrix(4.16667,0,0,4.16667,0,0)">
