--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import HoverCard from '../components/Tooltip.astro';
 ---
 
 <Layout title="Hey, I'm Martin!">
 <div id="hero" class="max-w-fit text-center space-y-4 py-4 flex justify-center flex-nowrap flex-col items-center">
 	<h1 class="font-bold text-4xl md:text-5xl xl:text-8xl">Hey, I'm Martin</h1>
 	<h3 class="font-sans text-2xl max-w-xs md:max-w-sm xl:max-w-xl xl:text-3xl">
-		Crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.
+		I love crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.
 	</h3>
 </div>
 
