--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import '@fontsource-variable/eb-garamond';
+import '@fontsource/vt323'
+
 interface Props {
 	title: string;
 }
@@ -11,8 +13,7 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html x-cloak x-transition x-data="{darkMode: $persist(false), init: false}" x-init="$nextTick(() => {init = true; })" x-bind:class="{ 'dark': darkMode
-}" lang="en" >
+<html x-cloak x-transition x-data="{darkMode: $persist(false), init: false}" x-init="$nextTick(() => {init = true; })" x-bind:class="{ 'dark': darkMode}" lang="en">
 	<BaseHead title={title}/>
 
 	<body x-cloak x-bind:class="{'transition-all duration-500' : init}" class="overflow-hidden flex flex-col flex-nowrap items-center justify-between">
@@ -20,12 +21,14 @@ const { title } = Astro.props;
 		<main class="w-full h-fit flex flex-wrap flex-col items-center justify-center p-3">
 			<slot />
 		</main>
-		<Footer className='p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-end' />
+		<Footer className='p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-center' />
 			
 	</body>
 
 <!-- AlpineJS Plugins -->
 	<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"></script>
+
 
 <!-- AlpineJS Core -->
 	<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -106,13 +109,17 @@ const { title } = Astro.props;
 		background-blend-mode: overlay;
 		@apply min-w-full min-h-full font-sans text-base  bg-[#e2e9e0] dark:bg-[#303037] text-[#303037] dark:text-[#e2e9e0];
 	}
+	
+	/* .fullScreenModal {
+		background: url("../assets/bg/bgDoodles.svg") no-repeat center/cover fixed;
+		background-blend-mode: exclusion;
+	} */
 
 	#monogram #lbracket, #monogram #rbracket, #monogram #M {
 		@apply fill-[#303037] dark:fill-[#e2e9e0]
 	}
 	
 	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		font-family: 'VT323', monospace;
 	}
 </style>
