--- a/src/components/MenuItems.astro
+++ b/src/components/MenuItems.astro
@@ -1,12 +1,36 @@
 ---
-import Modal from "./Modal.astro";
 import FullScreenModal from "./FullScreenModal.astro";
 import ProjectsList from "./ProjectsList.astro";
 
-type TailwindSpacing = 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 14 | 16 | 20 | 24 | 28 | 32 | 36 | 40 | 44 | 48 | 52 | 56 | 60 | 64 | 72 | 80 | 96;
+type TailwindSize =
+  | "0.5rem" // 2 in Tailwind
+  | "0.75rem" // 3 in Tailwind
+  | "1rem" // 4 in Tailwind
+  | "1.25rem" // 5 in Tailwind
+  | "1.5rem" // 6 in Tailwind
+  | "1.75rem" // 7 in Tailwind
+  | "2rem" // 8 in Tailwind
+  | "2.25rem" // 9 in Tailwind
+  | "2.5rem" // 10 in Tailwind
+  | "3rem" // 12 in Tailwind
+  | "3.5rem" // 14 in Tailwind
+  | "4rem" // 16 in Tailwind
+  | "5rem" // 20 in Tailwind
+  | "6rem" // 24 in Tailwind
+  | "8rem" // 32 in Tailwind
+  | "10rem" // 40 in Tailwind
+  | "12rem" // 48 in Tailwind
+  | "16rem" // 64 in Tailwind
+  | "20rem" // 80 in Tailwind
+  | "24rem" // 96 in Tailwind
+  | "32rem" // 128 in Tailwind
+  | "40rem" // 160 in Tailwind
+  | "48rem" // 192 in Tailwind
+  | "56rem" // 224 in Tailwind
+  | "64rem"; // 256 in Tailwind;
 
 interface Props {
-  size: TailwindSpacing;
+  size: TailwindSize;
   className?: string;
 }
 
@@ -21,16 +45,17 @@ const { size, className } = Astro.props;
   >
     <svg
       slot="trigger"
-      class={`h-${size} w-auto ${className}`}
+      height={size}
+      width={size}
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
-    >    
-
-    <path
-      fill="currentColor"
-      d="M8 4h12v16h-8v-8h6V8h-8v12H2v-8h6V4zm0 10H4v4h4v-4zm10 0h-4v4h4v-4z"
-    ></path>
-  </svg>  <span class="font-mono xl:text-lg">Music</span>
+    >
+      <path
+        fill="currentColor"
+        d="M8 4h12v16h-8v-8h6V8h-8v12H2v-8h6V4zm0 10H4v4h4v-4zm10 0h-4v4h4v-4z"
+      ></path>
+    </svg>
+    <span class="font-mono xl:text-lg">Music</span>
   </div>
   <section id="musicPlaylist"></section>
 </FullScreenModal>
@@ -41,7 +66,8 @@ const { size, className } = Astro.props;
     class="flex flex-col flex-none justify-center items-center flex-wrap"
   >
     <svg
-      class={`h-${size} w-auto ${className}`}
+      height={size}
+      width={size}
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
     >
@@ -59,7 +85,8 @@ const { size, className } = Astro.props;
     class="flex flex-col flex-none justify-center items-center flex-wrap"
   >
     <svg
-      class={`h-${size} w-auto ${className}`}
+      height={size}
+      width={size}
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
     >
