--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
 		<main class="w-full h-fit flex flex-wrap flex-col items-center justify-center p-3">
 			<slot />
 		</main>
-		<Footer className='p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-center' />
+		<Footer className='p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-center lg:items-end sm:portrait:items-end' />
 			
 	</body>
 
