--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import HoverCard from '../components/Tooltip.astro';
+import FeaturedLogos from '../components/FeaturedLogos.astro';
 ---
 
 <Layout title="Hey, I'm Martin!">
