Delete header, absolute footer, center content

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,12 +16,12 @@ const { title } = Astro.props;
 <html x-cloak x-transition x-data="{darkMode: $persist(false), init: false}" x-init="$nextTick(() => {init = true; })" x-bind:class="{ 'dark': darkMode}" lang="en">
 	<BaseHead title={title}/>
 
-	<body x-cloak x-bind:class="{'transition-all duration-500' : init}" class="overflow-hidden flex flex-col flex-nowrap items-center justify-between">
-		<Header className=' p-3' />
+	<body x-cloak x-bind:class="{'transition-all duration-500' : init}" class="overflow-hidden flex flex-col flex-nowrap items-center justify-center">
+		<!-- <Header className=' p-3' /> -->
 		<main class="w-full h-fit flex flex-wrap flex-col items-center justify-center p-3">
 			<slot />
 		</main>
-		<Footer className='p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-center lg:items-end sm:portrait:items-end' />
+		<Footer className='absolute bottom-0 p-3 flex flex-row flex-none flex-nowrap w-full justify-between items-center lg:items-end sm:portrait:items-end' />
 			
 	</body>
 
