--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import FeaturedLogos from '../components/FeaturedLogos.astro';
 ---
 
 <Layout title="Hey, I'm Martin!">
-<div id="hero" class="max-w-fit text-center space-y-4 py-4 flex justify-center flex-nowrap flex-col items-center">
+<div id="hero" class="max-w-fit text-center space-y-4 py-4 flex justify-center flex-nowrap flex-col items-center absolute z-20">
 	<h1 class="font-bold text-4xl md:text-5xl xl:text-8xl">Hey, I'm Martin</h1>
 	<h3 class="font-sans text-2xl max-w-xs md:max-w-sm xl:max-w-xl xl:text-3xl">
 		I love crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.
 	</h3>
 </div>
-
+<div class="relative top-1/4 z-0 flex h-fit w-fit max-w-full max-h-64">
+	<FeaturedLogos />
+</div>
 </Layout>
