--- a/src/components/BottomMenu.astro
+++ b/src/components/BottomMenu.astro
@@ -8,12 +8,12 @@ import MenuItems from './MenuItems.astro'
 
    <!-- Large Screen -->
    <div x-cloak x-transition class="max-h-full w-auto hidden sm:portrait:flex lg:flex flex-row flex-none justify-evenly items-center py-4 px-8 space-x-4 rounded-lg z-10 bg-[#303037]/20 dark:bg-[#e2e9e0]/20 backdrop-blur-sm">
-    <MenuItems className='' size={"3.5rem"} />
+    <MenuItems gitHubLink='https://github.com/martinfrommel' className='' size={"3.5rem"} />
   </div>
 
   <!-- Small Screen -->
     <div x-cloak x-transition x-show="show" class=" w-fit flex flex-row flex-none justify-evenly items-center py-4 px-8 space-x-4 rounded-lg absolute z-10 bottom-14 xl:bottom-24 bg-[#303037]/20 dark:bg-[#e2e9e0]/20 backdrop-blur-sm">
-      <MenuItems size={"2rem"} />
+      <MenuItems gitHubLink='https://github.com/martinfrommel' size={"2rem"} />
     </div>
 
   <!-- Hamburger Toggle -->
