--- a/src/components/MenuItems.astro
+++ b/src/components/MenuItems.astro
@@ -2,39 +2,13 @@
 import FullScreenModal from "./FullScreenModal.astro";
 import ProjectsList from "./ProjectsList.astro";
 
-type TailwindSize =
-  | "0.5rem" // 2 in Tailwind
-  | "0.75rem" // 3 in Tailwind
-  | "1rem" // 4 in Tailwind
-  | "1.25rem" // 5 in Tailwind
-  | "1.5rem" // 6 in Tailwind
-  | "1.75rem" // 7 in Tailwind
-  | "2rem" // 8 in Tailwind
-  | "2.25rem" // 9 in Tailwind
-  | "2.5rem" // 10 in Tailwind
-  | "3rem" // 12 in Tailwind
-  | "3.5rem" // 14 in Tailwind
-  | "4rem" // 16 in Tailwind
-  | "5rem" // 20 in Tailwind
-  | "6rem" // 24 in Tailwind
-  | "8rem" // 32 in Tailwind
-  | "10rem" // 40 in Tailwind
-  | "12rem" // 48 in Tailwind
-  | "16rem" // 64 in Tailwind
-  | "20rem" // 80 in Tailwind
-  | "24rem" // 96 in Tailwind
-  | "32rem" // 128 in Tailwind
-  | "40rem" // 160 in Tailwind
-  | "48rem" // 192 in Tailwind
-  | "56rem" // 224 in Tailwind
-  | "64rem"; // 256 in Tailwind;
-
 interface Props {
   size: TailwindSize;
   className?: string;
+  gitHubLink: string;
 }
 
-const { size, className } = Astro.props;
+const { size, className, gitHubLink } = Astro.props;
 ---
 
 <!-- Music Credits -->
@@ -60,7 +34,7 @@ const { size, className } = Astro.props;
   <section id="musicPlaylist"></section>
 </FullScreenModal>
 <!-- GitHub -->
-<a
+<a href={gitHubLink} target="_blank"
   ><div
     slot="trigger"
     class="flex flex-col flex-none justify-center items-center flex-wrap"
