Add transition and easing to featured logo dark/light mode swap

--- a/src/components/FeaturedLogos.astro
+++ b/src/components/FeaturedLogos.astro
@@ -15,7 +15,7 @@ import PruvodceBroumovemLogo from '../assets/logos/pruvodceBroumovemLogo.astro'
 
 <style>
     .featuredLogo {
-        @apply dark:fill-[#e2e9e0] fill-[#303037] transition-all ease-in-out;
+        @apply dark:fill-[#e2e9e0] fill-[#303037] transition-all ease-in-out opacity-90;
     };
 
     .featuredLogo #light {
