--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,5 +14,5 @@ const {className} = Astro.props;
     <DarkModeToggle />
     <BottomMenu />
     
-    <Tooltip tooltipArrow={true} tooltipText='Made with 🧗 in 🇨🇿' tooltipPosition={"left"} tooltipClassName='dark:bg-[#e2e9e0] dark:text-[#303037] bg-[#303037] text-[#e2e9e0] font-mono '><Monogram className='xl:w-24'/></Tooltip>
+    <Tooltip tooltipArrow={true} tooltipText='Made with 🧗 in 🇨🇿' tooltipPosition={"left"} tooltipClassName='dark:bg-light dark:text-dark bg-dark text-light font-mono '><Monogram className='xl:w-24'/></Tooltip>
 </footer>
