--- a/src/components/Tooltip.astro
+++ b/src/components/Tooltip.astro
@@ -23,7 +23,7 @@ const {tooltipArrow, tooltipPosition, tooltipText, tooltipClassName} = Astro.pro
         <div x-show="tooltipVisible" x-transition class=`relative px-2 py-1 ${tooltipClassName} rounded bg-opacity-90`>
             <p x-text="tooltipText" class="flex-shrink-0 block whitespace-nowrap"></p>
             <div x-ref="tooltipArrow" x-show="tooltipArrow" :class="{ 'bottom-0 -translate-x-1/2 left-1/2 w-2.5 translate-y-full' : tooltipPosition == 'top', 'right-0 -translate-y-1/2 top-1/2 h-2.5 -mt-px translate-x-full' : tooltipPosition == 'left', 'top-0 -translate-x-1/2 left-1/2 w-2.5 -translate-y-full' : tooltipPosition == 'bottom', 'left-0 -translate-y-1/2 top-1/2 h-2.5 -mt-px -translate-x-full' : tooltipPosition == 'right' }" class="absolute inline-flex items-center justify-center overflow-hidden">
-                <div :class="{ 'origin-top-left -rotate-45' : tooltipPosition == 'top', 'origin-top-left rotate-45' : tooltipPosition == 'left', 'origin-bottom-left rotate-45' : tooltipPosition == 'bottom', 'origin-top-right -rotate-45' : tooltipPosition == 'right' }" class="w-1.5 h-1.5 dark:bg-[#e2e9e0] bg-[#303037] transform bg-opacity-90"></div>
+                <div :class="{ 'origin-top-left -rotate-45' : tooltipPosition == 'top', 'origin-top-left rotate-45' : tooltipPosition == 'left', 'origin-bottom-left rotate-45' : tooltipPosition == 'bottom', 'origin-top-right -rotate-45' : tooltipPosition == 'right' }" class="w-1.5 h-1.5 dark:bg-light bg-dark transform bg-opacity-90"></div>
             </div>
         </div>
     </div>
