--- a/src/components/BottomMenu.astro
+++ b/src/components/BottomMenu.astro
@@ -4,20 +4,20 @@
 import MenuItems from './MenuItems.astro'
 ---
 
-<div class="flex flex-col justify-center items-center" x-data="{ show: false }">
+<div class="flex flex-col justify-center items-center select-none" x-data="{ show: false }">
 
    <!-- Large Screen -->
-   <div x-cloak x-transition class="max-h-full w-auto hidden sm:portrait:flex lg:flex flex-row flex-none justify-evenly items-center py-4 px-8 space-x-4 rounded-lg z-10 bg-[#303037]/20 dark:bg-[#e2e9e0]/20 backdrop-blur-sm">
+   <div x-cloak x-transition class="max-h-full w-auto hidden sm:portrait:flex lg:flex flex-row flex-none justify-evenly items-center py-4 px-8 space-x-6 rounded-lg z-10 bg-dark/20 dark:bg-light/20 backdrop-blur-sm">
     <MenuItems gitHubLink='https://github.com/martinfrommel' className='' size={"3.5rem"} />
   </div>
 
   <!-- Small Screen -->
-    <div x-cloak x-transition x-show="show" class=" w-fit flex flex-row flex-none justify-evenly items-center py-4 px-8 space-x-4 rounded-lg absolute z-10 bottom-14 xl:bottom-24 bg-[#303037]/20 dark:bg-[#e2e9e0]/20 backdrop-blur-sm">
+    <div x-cloak x-transition x-show="show" class=" w-fit flex flex-row flex-none justify-evenly items-center py-4 px-8 space-x-4 rounded-lg absolute z-10 bottom-14 xl:bottom-24 bg-dark/20 dark:bg-light/20 backdrop-blur-sm">
       <MenuItems gitHubLink='https://github.com/martinfrommel' size={"2rem"} />
     </div>
 
   <!-- Hamburger Toggle -->
-    <div class="sm:portrait:hidden lg:hidden">
+    <div class="sm:portrait:hidden lg:hidden active:scale-75 active:dark:bg-light/20 active:bg-dark/20 rounded-full transition-all duration-100 p-1">
         <svg  x-cloak x-show="show = !show" class="hover:cursor-pointer xl:h-12 xl:w-12" @click="show = !show" xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 24 24">
           <path fill="currentColor" d="M4 6h16v2H4V6zm0 5h16v2H4v-2zm16 5H4v2h16v-2z"/>
         </svg>
