--- a/src/components/Modal.astro
+++ b/src/components/Modal.astro
@@ -25,7 +25,7 @@
         x-transition:leave-start="opacity-100"
         x-transition:leave-end="opacity-0"
         @click="modalOpen=false"
-        class="absolute inset-0 w-full h-full bg-[#303037]/70 dark:bg-[#e2e9e0]/50 bg-opacity-50 backdrop-blur-sm"
+        class="absolute inset-0 w-full h-full bg-dark/70 dark:bg-light/50 bg-opacity-50 backdrop-blur-sm"
       >
       </div>
       <div
@@ -37,11 +37,11 @@
         x-transition:leave="ease-in duration-200"
         x-transition:leave-start="opacity-100 scale-100"
         x-transition:leave-end="opacity-0 scale-90"
-        class="relative w-full m-3 py-6 bg-[#e2e9e0] dark:bg-[#303037] shadow-md px-7 bg-opacity-90 drop-shadow-md backdrop-blur-sm sm:max-w-6xl rounded-sm sm:rounded-md"
+        class="relative w-full m-3 py-6 bg-light dark:bg-dark shadow-md px-7 bg-opacity-90 drop-shadow-md backdrop-blur-sm sm:max-w-6xl rounded-sm sm:rounded-md"
       > 
         <div class="flex items-center justify-between pb-3">
           <h3 class="text-lg font-semibold"><slot name="title"></slot></h3>
-          <svg aria-label="Close the modal" aria-labelledby="button" @click="modalOpen=false" class="absolute top-0 right-0 p-1 mt-5 mr-5 hover:cursor-pointer transition-all ease-out rounded-full hover:bg-[#303037]/20  hover:dark:bg-[#e2e9e0]/20" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M5 5h2v2H5V5zm4 4H7V7h2v2zm2 2H9V9h2v2zm2 0h-2v2H9v2H7v2H5v2h2v-2h2v-2h2v-2h2v2h2v2h2v2h2v-2h-2v-2h-2v-2h-2v-2zm2-2v2h-2V9h2zm2-2v2h-2V7h2zm0 0V5h2v2h-2z"/>
+          <svg aria-label="Close the modal" aria-labelledby="button" @click="modalOpen=false" class="absolute top-0 right-0 p-1 mt-5 mr-5 hover:cursor-pointer transition-all ease-out rounded-full hover:bg-dark/20  hover:dark:bg-light/20" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M5 5h2v2H5V5zm4 4H7V7h2v2zm2 2H9V9h2v2zm2 0h-2v2H9v2H7v2H5v2h2v-2h2v-2h2v-2h2v2h2v2h2v2h2v-2h-2v-2h-2v-2h-2v-2zm2-2v2h-2V9h2zm2-2v2h-2V7h2zm0 0V5h2v2h-2z"/>
         </div>
         <div class="relative w-auto pb-8">
           <slot/>
