--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -93,6 +93,7 @@ const { title } = Astro.props;
 	html {
 		width: 100vw;
 		height: 100vh;
+
 		
 	}
 	
@@ -107,7 +108,7 @@ const { title } = Astro.props;
 	body {
 		background: url("../assets/bg/bgDoodles.svg") no-repeat center/cover fixed;
 		background-blend-mode: overlay;
-		@apply min-w-full min-h-full font-sans text-base  bg-[#e2e9e0] dark:bg-[#303037] text-[#303037] dark:text-[#e2e9e0];
+		@apply min-w-full min-h-full font-sans text-base  bg-light dark:bg-dark text-dark dark:text-light selection:bg-dark/20 dark:selection:bg-light/20 ;
 	}
 	
 	/* .fullScreenModal {
@@ -116,7 +117,7 @@ const { title } = Astro.props;
 	} */
 
 	#monogram #lbracket, #monogram #rbracket, #monogram #M {
-		@apply fill-[#303037] dark:fill-[#e2e9e0]
+		@apply fill-dark dark:fill-light
 	}
 	
 	code {
