--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,15 @@ import FeaturedLogos from '../components/FeaturedLogos.astro';
 ---
 
 <Layout title="Hey, I'm Martin!">
-<div id="hero" class="max-w-fit text-center space-y-4 py-4 flex justify-center flex-nowrap flex-col items-center absolute z-20">
-	<h1 class="font-bold text-4xl md:text-5xl xl:text-8xl">Hey, I'm Martin</h1>
-	<h3 class="font-sans text-2xl max-w-xs md:max-w-sm xl:max-w-xl xl:text-3xl">
+<div id="hero" class="max-w-fit scale-90 xs:scale-1003 text-center space-y-4 py-4 px-2 flex justify-center flex-nowrap flex-col items-center absolute portrait:top-1/3 z-20">
+	<h1 class="font-bold text-4xl md:portrait:text-7xl md:text-5xl xl:text-8xl">Hey, I'm Martin</h1>
+	<h3 class="font-sans text-2xl max-w-xs md:portrait:text-3xl md:portrait:max-w-md md:max-w-sm xl:max-w-xl xl:text-3xl">
 		I love crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.
 	</h3>
 </div>
-<div class="relative top-1/4 z-0 flex h-fit w-fit max-w-full max-h-64">
-	<FeaturedLogos />
-</div>
+<!-- <div class="relative top-1/4 z-0 xl:landscape:flex flex-col justify-center items-center space-y-6 h-fit w-fit max-w-full max-h-64 bg-light/20 rounded-md px-6 py-4 landscape:hidden">
+	<h2>My recent projects and collaborations</h2>
+	<FeaturedLogos className="flex flex-row justify-evenly items-center space-x-6 h-full" />
+
+</div> -->
 </Layout>
