--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,6 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import Analytics from './Analytics.astro';
 interface Props  {
     title: string;
 
@@ -18,3 +19,5 @@ const {title} = Astro.props
 
     <ViewTransitions />
 </head>
+<!-- Google tag (gtag.js) -->
+<Analytics />
