--- a/src/components/FullScreenModal.astro
+++ b/src/components/FullScreenModal.astro
@@ -3,9 +3,10 @@ interface Props {
   id: number;
   title?: string;
   subtitle?: string;
+  windowId: string;
 }
 
-const { title, subtitle, id } = Astro.props;
+const { title, subtitle, id, windowId } = Astro.props;
 ---
 
 <div
@@ -18,7 +19,7 @@ const { title, subtitle, id } = Astro.props;
     <slot name="trigger" />
   </div>
   <template x-teleport="body">
-    <div
+    <div id={`${windowId}`}
       x-show="fullscreenModal"
       x-transition
       class="fullScreenModal flex fixed inset-0 z-[99] py-2 w-screen max-h-screen dark:bg-dark/80 bg-light/60 backdrop-blur-md overflow-auto px-5 scrollbar-hide"
