Changes to be committed: 	modified:   src/pages/index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import promoPhoto from '../assets/promoPhoto1.jpeg'
 	<h3 class="font-sans text-2xl max-w-xs md:portrait:text-3xl md:portrait:max-w-md md:max-w-sm xl:max-w-xl xl:text-3xl">
 		I love crafting web apps that rock, resonating with the rhythm of innovation, and summiting the peaks of open-source.
 	</h3>
+	<p class="font-mono text-lg"><span class="font-bold">Contact me at:&nbsp;</span><a class="hover:border-b-2 hover:dark:border-b-light hover:border-b-dark transition-all duration-200 ease-in-out" href="mailto:martin@mixdock.co.uk">martin@mixdock.co.uk</a></p>
 </div>
 <!-- <Image class={"rounded-md max-h-36 w-auto relative top-1/4"} src={promoPhoto} alt={"Hey, it's me!"} width={promoPhoto.width} height={promoPhoto.height} format='webp' /> -->
 
