--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,16 +10,16 @@ import promoPhoto from "../assets/promoPhoto1.jpeg";
     id="hero"
     class="max-w-fit text-center space-y-4 py-4 px-2 flex justify-center flex-nowrap flex-col items-center absolute lg:portrait:top-auto portrait:top-1/3 z-20"
   >
-    <h1 class="font-bold text-3xl sm:text-4xl md:portrait:text-7xl md:text-5xl xl:text-8xl">
+    <h1 class=" font-bold landscape:text-3xl landscape:md:text-4xl text-3xl sm:text-4xl md:portrait:text-7xl md:text-5xl xl:text-8xl">
       Hey, I'm Martin
     </h1>
     <h2
-      class="font-sans text-md sm:text-2xl max-w-xs md:portrait:text-3xl md:portrait:max-w-md md:max-w-sm xl:max-w-xl xl:text-3xl"
+      class="landscape:text-sm landscape:md:text-lg font-sans text-md sm:text-2xl max-w-xs md:portrait:text-3xl md:portrait:max-w-md md:max-w-sm xl:max-w-xl xl:text-3xl"
     >
       I love crafting web apps that rock, resonating with the rhythm of
       innovation, and summiting the peaks of open-source.
     </h2>
-    <p class="font-mono text-md xl:text-lg">
+    <p class=" font-mono text-md xl:text-lg">
       <span class="font-bold">Contact me at:&nbsp;</span><a
         class="hover:border-b-2 hover:dark:border-b-light hover:border-b-dark transition-all duration-200 ease-in-out"
         href="mailto:martin@mixdock.co.uk">martin@mixdock.co.uk</a>
