--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import promoPhoto from "../assets/promoPhoto1.jpeg";
 <Layout title="Hey, I'm Martin!">
   <div
     id="hero"
-    class="max-w-fit text-center space-y-4 py-4 px-2 flex justify-center flex-nowrap flex-col items-center absolute lg:portrait:top-auto portrait:top-1/3 z-20"
+    class="max-w-fit text-center space-y-4 py-4 px-2 flex justify-center flex-nowrap flex-col items-center absolute lg:portrait:top-auto portrait:top-1/3 z-20 my-8 mx-6"
   >
     <h1 class=" font-bold landscape:text-3xl landscape:md:text-4xl text-3xl sm:text-4xl md:portrait:text-7xl md:text-5xl xl:text-8xl">
       Hey, I'm Martin
