--- a/src/components/Analytics.astro
+++ b/src/components/Analytics.astro
@@ -1,5 +1,5 @@
 <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-PHXT7J3XD1"></script>
-<script>
+<script is:inline>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
