--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,18 +8,18 @@ import promoPhoto from "../assets/promoPhoto1.jpeg";
 <Layout title="Hey, I'm Martin!">
   <div
     id="hero"
-    class="max-w-fit text-center space-y-4 py-4 px-2 flex flex-shrink justify-center flex-nowrap flex-col items-center absolute top-auto z-20 my-8 mx-6 max-h-full"
+    class="max-w-fit text-center space-y-4 py-4 px-2 flex flex-shrink justify-center flex-nowrap flex-col items-center relative top-auto z-20 my-8 mx-6 max-h-full"
   >
-    <h1 class=" font-bold landscape:text-3xl landscape:md:text-4xl text-3xl sm:text-4xl md:portrait:text-7xl md:text-5xl xl:text-8xl">
+    <h1 class=" font-bold landscape:text-3xl landscape:md:text-4xl landscape:xl:text-8xl text-3xl sm:text-4xl md:portrait:text-7xl md:text-5xl xl:text-8xl">
       Hey, I'm Martin
     </h1>
     <h2
-      class="landscape:text-sm landscape:md:text-lg font-sans text-md sm:text-2xl max-w-xs md:portrait:text-3xl md:portrait:max-w-md md:max-w-sm xl:max-w-xl xl:text-3xl"
+      class="landscape:text-sm landscape:md:text-lg landscape:xl:text-3xl font-sans text-md sm:text-2xl max-w-xs md:portrait:text-3xl md:portrait:max-w-md md:max-w-sm xl:max-w-xl xl:text-3xl"
     >
       I love crafting web apps that rock, resonating with the rhythm of
       innovation, and summiting the peaks of open-source.
     </h2>
-    <p class=" font-mono text-md xl:text-lg">
+    <p class=" font-mono text-sm sm:text-md xl:text-lg">
       <span class="font-bold">Contact me at:&nbsp;</span><a
         class="hover:border-b-2 hover:dark:border-b-light hover:border-b-dark transition-all duration-200 ease-in-out"
         href="mailto:martin@mixdock.co.uk">martin@mixdock.co.uk</a>
