--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ const { title } = Astro.props;
     font-display: swap;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Rockwell';
     src: local('Rockwell-Bold'),
         url('fonts/subset-Rockwell-Bold.woff2') format('woff2'),
@@ -58,7 +58,7 @@ const { title } = Astro.props;
     font-weight: bold;
     font-style: normal;
     font-display: swap;
-}
+} */
 
 @font-face {
     font-family: 'Rockwell';
