--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,9 +14,12 @@ const {title, description = "Discover the portfolio of a seasoned web developer 
     <!-- Google tag (gtag.js) -->
     <Analytics />
     <meta charset="UTF-8" />
-    <meta name="description" content=`${description}`>
+    <meta name="description" content=`${description}`/>
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="light"/>
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="dark"/>
+    <meta name="robots" content="all">
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/webp" href="/favicon.webp" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <ViewTransitions />
